--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <p>My name is Laksamana Steven Morison, i was born on September 11 2000, i graduate with bachelor's degree in computer science from <em>Universitas Teknologi Yogyakarta in 2023.</em>.</p> 
                             <p>Now, i work as an<em> Odoo Developer </em> at a company in Yogyakarta since 2023. My Job is about develop a new module or recreate existing modules from Odoo Open ERP, based on user requests.</p>
                             <p>I also work as a <em> Freelance Web Developer</em> who receives services to create WebApps, Landing Pages, Company Profiles, Portfolios and Resumes/Cvs, you can check on my Website right here <a href="https://stevencodelab.000webhostapp.com/">StevenCodeLab</a> and see my works or click on the Contact Me button bellow.</p>
-                          <div class="main-btn"><a href="">Contact Me</a></div>
+                          <div class="main-btn"><a href="www.google.com">Contact Me</a></div>
                       </div>
                     </div>
                     <div class="col-md-6">
