--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       <h2>Laksamana Steven Morison</h2>
                       <p>I work as<em> Odoo Developer</em>, graduated from <em>Universitas Teknologi Yogyakarta</em> with <em>Computer Science</em> major. I have <em> ±3 years of experienced</em> in programming and web development.  also work as a Freelance Web Developer.</p>
                       <div class="main-btn"><a href="#2">Read More</a></div>
-                      <div class="fb-btn"><a href="https://www.github.com/stevencodelab" target="_blank">My Github Page</a></div>
+                      <div class="fb-btn"><a href="https://stevencodelab.000webhostapp.com" target="_blank">My Page</a></div>
                   </div>
               </div>
             </div>
